sandc/test/fixtures/astRegression/shouldFail/productions/statement/FinallyClause.sand
pub class FinallyClause {
    foo() {
        try {

        } catch e: Foo {

        } finally {
            
        }
    }
}